--- a/css/style.css
+++ b/css/style.css
@@ -22,23 +22,26 @@ footer {
   color: #fff;
 }
 
-/* image en haut du header */
-.bannière {
-  display: block;
-  height: 173px;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  color: white;
-  letter-spacing: 0px;
-}
-
 /* Menu disposition */
 header {
   display: flex;
   margin-bottom: 10px;
   font-size: x-large;
   font-family: Georgia, 'Times New Roman', Times, serif;
+  animation: 1s ease-out 0s 1 animation_entrer;
+  -moz-animation: 1s ease-out 0s 1 animation_entrer;
+  -o-animation: 1s ease-out 0s 1 animation_entrer;
+  -webkit-animation: 1s ease-out 0s 1 animation_entrer;
+}
+
+@keyframes animation_entrer {
+  0% {
+    transform: translateX(-100%);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
 }
 
 nav {
@@ -165,26 +168,7 @@ h2 {
 }
 
 /* Deuxième section ( image jeux) */
-.galerie {
-  display: flex;
-  flex-direction: row column;
-  justify-content: center;
-  flex-wrap: wrap;
-}
 
-.fanart {
-  width: 400px;
-  height: 300px;
-  margin: 35px;
-  box-shadow: 0px 0px 25px #200fb6;
-  transition: 1.0s all ease-in-out;
-}
-
-.fanart:hover {
-  -ms-transform: scale(1.5);
-  -webkit-transform: scale(1.5);
-  transform: scale(1.5);
-}
 
 figure {
   display: flex;
@@ -319,16 +303,4 @@ h5 {
   flex-direction: row column;
   justify-content: center;
   flex-wrap: wrap;
-}
-
-#background-video {
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
 }
