--- a/css/style_media.css
+++ b/css/style_media.css
@@ -6,7 +6,13 @@
   margin-left: auto;
   margin-right: auto;
   color: white;
-  letter-spacing: 0px;
+}
+
+/* formatage de la vidéo index */
+#formatvideo {
+  margin-bottom: 20px;
+  width: 700px;
+  height: 450px;
 }
 
 /* index galerie */
