--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,8 @@ li a:hover {
   position: absolute;
   background-color: #675353;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgb(255, 20, 20);
-  padding: 0px 0px;
+  box-shadow: 0 8px 16px 0 rgb(255, 20, 20);
+  padding: 0 0;
   z-index: 1;
   border-style: solid;
   font-size: small;
@@ -114,7 +114,7 @@ section {
   background-color: rgb(15, 10, 78);
   justify-content: center;
   border-radius: 10px 10px 10px 10px;
-  box-shadow: 0px 0px 30px rgb(93, 10, 135);
+  box-shadow: 0 0 30px rgb(93, 10, 135);
   margin-bottom: 40px;
 }
 
@@ -162,7 +162,7 @@ h2 {
 
 figure {
   display: flex;
-  margin: 0px 0px 0px 0px;
+  margin: 0 0 0 0;
   flex-flow: column;
 }
 
@@ -176,6 +176,11 @@ figcaption {
 }
 
 /* Partie Résumer du jeux */
+table {
+  text-decoration: none;
+  text-align: center;
+}
+
 table,
 td {
   border: 1px solid #333;
@@ -194,10 +199,11 @@ tfoot {
 h3 {
   color: rgb(201, 46, 18);
   font-size: x-large;
-  text-decoration-line: underline
+  text-decoration-line: underline;
+  margin-bottom: 5px;
 }
 
-.textlore {
+#textlore {
   font-family: fantasy;
   font-style: unset;
   color: #9b7226;
@@ -224,8 +230,8 @@ h3 {
 .ulzone {
   text-align: left;
   float: left;
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
   margin-left: 25px;
@@ -252,17 +258,6 @@ h4 {
   text-decoration: underline;
 }
 
-.imagezone {
-  width: 700px;
-  height: 400px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  justify-content: center;
-  margin-bottom: 25px;
-  box-shadow: 0px 0px 25px #200fb6;
-}
-
 .textzone {
   color: #fff;
 }
@@ -274,7 +269,7 @@ h5 {
   text-decoration: underline;
   display: block;
   margin-top: 30px;
-  margin-left: 3 0px;
+  margin-left: 3px 0;
   margin-right: 30px;
   text-align: center;
   align-items: center;
@@ -286,11 +281,4 @@ h5 {
   text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: 10px 10px 10px 10px;
-}
-
-.explorationimage {
-  display: flex;
-  flex-direction: row column;
-  justify-content: center;
-  flex-wrap: wrap;
 }
