--- a/css/style_media.css
+++ b/css/style_media.css
@@ -1,5 +1,5 @@
 /* image en haut du header */
-.bannière {
+.banniere {
   display: block;
   height: 173px;
   width: 80%;
@@ -27,7 +27,7 @@
   width: 400px;
   height: 300px;
   margin: 35px;
-  box-shadow: 0px 0px 25px #200fb6;
+  box-shadow: 0 0 25px #200fb6;
   transition: 1.0s all ease-in-out;
 }
 
@@ -50,4 +50,22 @@
   top: 0;
   bottom: 0;
   z-index: -1;
+}
+
+.explorationimage {
+  display: flex;
+  flex-direction: row column;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.imagezone {
+  width: 700px;
+  height: 400px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  margin-bottom: 25px;
+  box-shadow: 0px 0px 25px #200fb6;
 }
