--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ section {
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0 0 30px rgb(93, 10, 135);
   margin-bottom: 40px;
+  overflow: hidden;
 }
 
 h1 {
@@ -146,15 +147,6 @@ h2 {
   padding-right: 10px;
   text-align: center;
   color: #5abd13;
-}
-
-.formatvideo {
-  margin-bottom: 20px;
-}
-
-.videoacceuil {
-  margin-bottom: 25px;
-  margin: auto auto;
 }
 
 /* Deuxième section ( image jeux) */
@@ -203,6 +195,12 @@ h3 {
   margin-bottom: 5px;
 }
 
+p {
+  color: white;
+  text-align: center;
+  font-size: medium;
+}
+
 #textlore {
   font-family: fantasy;
   font-style: unset;
@@ -228,13 +226,10 @@ h3 {
 }
 
 .ulzone {
-  text-align: left;
-  float: left;
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-direction: column;
-  margin-left: 25px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 10px;
 }
 
@@ -256,13 +251,11 @@ h4 {
   color: #6d5454;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif x;
   text-decoration: underline;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
-.textzone {
-  color: #fff;
-}
-
-h5 {
+h4 {
   font-size: xx-large;
   color: #6d5454;
   font-family: Georgia, 'Times New Roman', Times, serif;
