--- a/css/style.css
+++ b/css/style.css
@@ -196,9 +196,12 @@ h3 {
 }
 
 p {
-  color: white;
-  text-align: center;
   font-size: medium;
+  color: #c2a268;
+  font-style: italic;
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 10px 10px 10px 10px;
 }
 
 #textlore {
@@ -220,9 +223,9 @@ p {
 }
 
 .listezone {
-  list-style-type: square;
-  text-align: left;
-  color: aliceblue;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(126, 228, 24);
+  text-align: center;
 }
 
 .ulzone {
@@ -231,6 +234,7 @@ p {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
+
 }
 
 .leftliste {
@@ -253,25 +257,8 @@ h4 {
   text-decoration: underline;
   margin-bottom: 5px;
   margin-top: 5px;
-}
-
-h4 {
-  font-size: xx-large;
-  color: #6d5454;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  text-decoration: underline;
   display: block;
-  margin-top: 30px;
   margin-left: 3px 0;
   margin-right: 30px;
-  text-align: center;
   align-items: center;
-}
-
-.zonetexte {
-  color: #c2a268;
-  font-style: italic;
-  text-align: center;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  margin: 10px 10px 10px 10px;
 }
